fixed last page on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -482,7 +482,25 @@ h2.summary {
     }
 
     .container {
+      width: 100vw;
+    }
+
+    .container-flex {
+      line-height: 20px;
+      font-size: 10px;
+      padding: 34px;
+    }
+
+    .container-contact {
       display: none;
+    }
+
+    #photo {
+      display: none;
+    }
+
+    h1.summary {
+      font-size: 40px;
     }
 
 	}
